# neko-mouse-world

./: .gitignore  README.md  pyproject.toml
docs/: ai-agent-tool.md  client-developer-api.md  executable-builds.md  server-command-console.md
examples/castle_showcase/: info.world
src/neko_mouse_world/: __init__.py  __main__.py  app.py  box_assets.py  box_mesh.py  client.py  client_net.py  collision.py  net_protocol.py  orientation.py  server.py  version.py  world_file.py
tools/: _build_executable.py  ai_agent.py  build_linux_server_exe.py  build_windows_client_exe.py  build_windows_server_exe.py  capture_showcase_screenshots.py  generate_castle_showcase.py  pyinstaller_client_entry.py  pyinstaller_linux_server_entry.py  pyinstaller_server_entry.py
